<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EspecialistaEscolhidoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:background="@color/colorAccent"
        android:src="@drawable/barradescricao"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:id="@+id/especialista_imagem_id"/>


    <TextView
        android:id="@+id/especialista_nome_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/cinza2"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/especialista_especialidade_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/especialista_registro_profissional_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/especialista_ano_formacao_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/especialista_endereco_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/especialista_telefone_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/especialista_valor_atendimento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_da_consulta"
        android:textSize="18sp"
        android:textAlignment="center" />


    <Button
        android:id="@+id/buton_marcar_atendimento_id"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="#47a55e"
        android:text="@string/marque_aqui"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/branco"
        android:textSize="15sp"
        android:textStyle="bold" />




</LinearLayout>